--- a/python/misc/ble_server.service
+++ b/python/misc/ble_server.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=BLE Server Dabble
+After=network-online.target
 
 [Service]
 User=root
@@ -13,10 +14,11 @@ StandardOutput=journal
 #StandardOutput=tty
 #StandardError=null
 TTYPath=/dev/tty12 
+Restart=always
 
 # we do not want any child process (e.g. updater) to kill if parent is killed (e.g. by updater) which otherwise would in turn kill the updater 
 # https://stackoverflow.com/questions/32208782/cant-detach-child-process-when-main-process-is-started-from-systemd
-KillMode=process
+# KillMode=process
 
 [Install]
 WantedBy=multi-user.target
